--- a/cadastrar.html
+++ b/cadastrar.html
@@ -45,7 +45,7 @@
 
     </head> <!-- /Fim NavBar -->
 
-    <section>
+    <section class="principal">
         <div class="container">
             <div class="main-box">
 
