--- a/disco.html
+++ b/disco.html
@@ -45,7 +45,7 @@
 
     </head> <!-- /Fim NavBar -->
 
-    <section>
+    <section class="principal">
         <div class="container">
             <div class="main-box" style="padding: 80px 80px;">
                 <div class="row m-0 p-0">
