--- a/home.html
+++ b/home.html
@@ -45,12 +45,12 @@
 
     </head> <!-- /Fim NavBar -->
 
-    <section>
+    <section class="principal">
         <div class="container">
             <div class="main-box">
 
                 <h1 class="home-title">OLÁ, SEJA BEM-VINDO(A)</h1>
-                <a href="" class="btn btn-light"><i class="far fa-plus-square"></i> &nbsp ADICIONAR UM NOVO DISCO</a>
+                <a href="" class="btn btn-light" style="margin: 60px 0;"><i class="far fa-plus-square"></i> &nbsp ADICIONAR UM NOVO DISCO</a>
                 <h2>Meus discos: </h2>
                 <p class="text-start p-5">
                     1. <strong>Earthless</strong> – Rhythms from a Cosmic Sky | EUA | 2007 <br>
