--- a/index.html
+++ b/index.html
@@ -47,7 +47,7 @@
 
     </head> <!-- /Fim NavBar -->
 
-    <section>
+    <section class="principal0">
         <div class="container">
             <div class="main-box">
                 <h1 class="index-title">ORGANIZE SUA COLEÇÃO <br> DE DISCOS!</h1>
@@ -72,7 +72,7 @@
                         </a>                    
                     </div>
                 </div>
-                <a href="" class="btn btn-secondary">CRIE SUA CONTA</a>
+                <a href="" class="btn btn-secondary" style="margin-top: 60px;">CRIE SUA CONTA</a>
             </div>    
         </div>
     </section>
